--- a/ALLProject/static/css/index.css
+++ b/ALLProject/static/css/index.css
@@ -65,31 +65,48 @@
 
     #messages-container {
         width: 20vw;
-        height: 100%;
+        height: fit-content;
         position: absolute;
         z-index: 5;
         right: 0%;
+        top: 0%;
         display: flex;
         justify-content: center;
         align-items: flex-start;
         padding-top: 5vh;
+        overflow: hidden;
     }
 
     .message {
         width: 90%;
-        height: 15vh;
+        aspect-ratio: 4/1;
         background-color: #FFF7EB;
         border-radius: 1vw;
         box-shadow: 4px 2px 4px gray;
+        display: flex;
+        align-items: center;
+        padding-left: 1vw;
+        animation: cssAnimation 0s 3s forwards;
+        visibility: visible;
+    }
+
+    @keyframes cssAnimation {
+    to   { visibility: hidden; }
     }
 
     .success{
         color: green;
     }
 
-    .message p {
+    .message img {
+        width: 2vw;
+    }
+
+    .message-text {
         margin-left: 5%;
-        font-family: "Mukta Mahee" sans-serif;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-weight: 300;
+        font-style: normal;
         font-size: 1.2vw;
     }
 
