fetched code data from qr

--- a/ALLProject/pos/static/css/sales_page.css
+++ b/ALLProject/pos/static/css/sales_page.css
@@ -70,7 +70,7 @@ h2,h3{
     width: inherit;
     height: inherit;
     visibility: hidden;
-    text-align: center;
+    text-align: -webkit-center;
 }
 .details-box.default{
     visibility: visible;
@@ -80,7 +80,6 @@ h2,h3{
 }
 .details-box.addItem {
     visibility: hidden;
-    align-content: center;
 }
 .boxTitle.add {
     margin-top: 1.5%;
