--- a/ALLProject/users/templates/users/password_reset.html
+++ b/ALLProject/users/templates/users/password_reset.html
@@ -2,33 +2,34 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel = "stylesheet" href="{% static 'css/index.css' %}">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Mukta+Mahee:wght@200;300;400;500;600;700;800&family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
-        <title> User Login </title>
+    <link rel = "stylesheet" href="{% static 'css/password.css' %}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mukta+Mahee:wght@200;300;400;500;600;700;800&family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+    <title>{% block title %} 
+        Forgot Password
+    {% endblock title %} </title>
     </head>
     
     <body>
         <div id="form-container">
             <div id="form-left">
                 {% block content %}
-                    
-                    <img src="{% static 'images/warehub-logo.png'%}" alt="Warehub logo" id="warehub-logo">
-                    <h1>Login to WareHub</h1>
+                    <h1>Forgot Password?</h1>
+                    <form method="POST" id="email-form">
+                        {%csrf_token%}
+                        <div class="form-row">
+                            <label for="id_email">Email</label>
+                            <input type="email" name="email"  class="form-control"
+                                    autocomplete="email" maxlength="254" required id="id_email"
+                                    placeholder="Enter email">
+                            </input>
+                        </div>
 
-                    <form method="POST" id="loginForm">
-                        {% csrf_token%}
-
-                        <label for="user-email">Username</label><br>
-                        {{form.username}}<br></br>
-                        <label for="password">Password</label><br>
-                        {{form.password}}<br></br>
-
-                        <input type="submit" value="Login" id="submit-Bttn">
+                        <button type="submit" id="submit-Bttn">Submit</button>
                     </form>
 
-                    <a href="{% url 'password_reset'%}">Forgot password?</a>
+                    <a href="{% url 'user_login'%}">Back to login</a>
                 {% endblock %}
             </div>
             <div id="form-right">
