--- a/ALLProject/static/css/password.css
+++ b/ALLProject/static/css/password.css
@@ -12,10 +12,6 @@
         background-image: url(../images/warehouse-1.jpg);
     }
 
-    h1 {
-        font-family: "Mukta Mahee" sans-serif;
-    }
-
     #form-container {
         position: absolute;
         place-self: anchor-center;
@@ -46,7 +42,7 @@
 
     #loginForm {
         margin: auto;
-        padding: 1%;
+        padding: 10%;
         text-align: center;
     }
 
@@ -77,7 +73,90 @@
         background: #603d3f;
     }
 
-    #warehub-logo{
+    #messages-container {
+        width: 20vw;
+        height: fit-content;
+        position: absolute;
+        z-index: 5;
+        right: 0%;
+        top: 0%;
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        padding-top: 5vh;
+        overflow: hidden;
+    }
+
+    .message {
+        width: 90%;
+        aspect-ratio: 4/1;
+        background-color: #FFF7EB;
+        border-radius: 1vw;
+        box-shadow: 4px 2px 4px gray;
+        display: flex;
+        align-items: center;
+        padding-left: 1vw;
+        animation: cssAnimation 0s 3s forwards;
+        visibility: visible;
+    }
+
+    @keyframes cssAnimation {
+    to   { visibility: hidden; }
+    }
+
+    .success{
+        color: green;
+    }
+
+    .message img {
+        width: 2vw;
+    }
+
+    .message-text {
+        margin-left: 5%;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-weight: 300;
+        font-style: normal;
+        font-size: 1.2vw;
+    }
+
+    .form-row {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        height: 8vh;
+        margin-bottom: 2vh;
+    }
+
+    #email-form{
+        margin-bottom: 3vh;
+    }
+
+    .vertical {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .alert {
+        color: rgb(180, 0, 0)
+    }
+
+    ul {
+        list-style-type: none;
+    }
+    
+    .fail {
+        width: 80%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .fail h3 {
+        text-align: center;
+    }
+
+    .fail img {
         width: 5vw;
     }
 }
