Finished first-time login password change

--- a/ALLProject/static/css/password.css
+++ b/ALLProject/static/css/password.css
@@ -25,10 +25,8 @@
 
     #form-left {
         width: 56%;
-        height: auto;
+        height: 100%;
         aspect-ratio: 1/3;
-        align-content: center;
-        justify-items: anchor-center;
     }
 
     #form-right {
@@ -71,6 +69,7 @@
 
     #submit-Bttn:hover {
         background: #603d3f;
+        cursor: pointer;
     }
 
     #messages-container {
@@ -158,5 +157,44 @@
 
     .fail img {
         width: 5vw;
+    }
+
+    #password-change {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        overflow-y: scroll;
+    }
+
+    #welcome-p{
+        padding: 0 5vw;
+    }
+
+    #password-change form {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        padding-bottom: 5vh;
+    }
+
+    #password-change p {
+        text-align: center;
+    }
+
+    .password-form-row {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 90%;
+        margin: 3vh 0;
+    }
+
+    .password-form-row h3 {
+        margin: 0;
     }
 }
