--- a/ALLProject/pos/static/css/sales_page.css
+++ b/ALLProject/pos/static/css/sales_page.css
@@ -3,6 +3,7 @@ body, html {
     font-size: 1vw;
     width: 100%;
     height: 100%;
+    overflow: hidden;
     margin: 0;
     background-color: #F0ECDD;
 }
@@ -157,14 +158,6 @@ h2,h3{
 }
 .close-product-box:hover {
     background-color: rgba(232, 101, 106);
-}
-
-.cartbox {
-    position: relative;
-    left: 10%;
-    width: 65%;
-    background-color: #FFF;
-    box-shadow: -2px 2px 8px 0px rgba(0, 0, 0, 0.3);
 }
 
 #scanner-div {
