--- a/ALLProject/pos/templates/pos/sales_cart.html
+++ b/ALLProject/pos/templates/pos/sales_cart.html
@@ -16,7 +16,9 @@
                         <th></th>
                         <th>Product Name</th>
                         <th>Unit Price</th>
+                        <th width='10'></th>
                         <th>Quantity</th>
+                        <th width='10'></th>
                         <th>Total</th>
                     </tr>
                 </thead>
@@ -24,7 +26,7 @@
                     {% if cart %}
                         {% for item in cart %}
                             <tr class="cart">
-                                <td><form action="" method="post">
+                                <td><form action="" method="post" class="edit-cart">
                                         {% csrf_token %}
                                         <input type="hidden" name="delete" value="{{ item.name }}">
                                         <button type="submit" class="delete">X</button>
@@ -32,7 +34,19 @@
                                 </td>
                                 <td>{{ item.name }}</td>
                                 <td>{{ item.unit_price|floatformat:2 }}</td>
+                                <td><form action="" method="post" class="edit-cart">
+                                        {% csrf_token %}
+                                        <input type="hidden" name="minus" value="{{ item.name }}">
+                                        <button type="submit" class="edit-quantity">-</button>
+                                    </form>
+                                </td>
                                 <td>{{ item.quantity }}</td>
+                                <td><form action="" method="post" class="edit-cart">
+                                        {% csrf_token %}
+                                        <input type="hidden" name="add" value="{{ item.name }}">
+                                        <button type="submit" class="edit-quantity">+</button>
+                                    </form>
+                                </td>
                                 <td>{{ item.total_price|floatformat:2 }}</td>
                             </tr>
                         {% endfor %}
