--- a/ALLProject/users/templates/users/home.html
+++ b/ALLProject/users/templates/users/home.html
@@ -103,7 +103,7 @@
             }
 
             @keyframes cssAnimation {
-                to   { visibility: hidden;}
+                to   { visibility: hidden; display: none;}
             }
 
             .success{
