--- a/ALLProject/reports/templates/reports/best_selling.html
+++ b/ALLProject/reports/templates/reports/best_selling.html
@@ -13,6 +13,9 @@
         </div>
     </head>
     <body>
+        <div id="return">
+            <a href="{% url 'report' %}" id="close-box"><img src="{% static 'images/back-arrow.png' %}" alt="back-arrow" id="close"></a>
+        </div>
         <div id="main-content">
             <table class="products">
                 <thead class="products">
