--- a/ALLProject/static/css/product_restock.css
+++ b/ALLProject/static/css/product_restock.css
@@ -14,25 +14,35 @@ h1,h3 {
     margin-bottom: 1%;
 }
 
-#close {
-    width: 4vh;
-    height: 4vh;
-    padding: 0;
+#return {
+    position: absolute;
+    top: 15vh;
+    width: 4%;
+    background-color: #9eb7a0;
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+    box-shadow: 0px 4px 4px -2px #5a6a5c;
 }
 
 #close-box {
-    width: 6vh;
-    height: 6vh;
-    margin-top: 1%;
-    margin-left: 2%;
-
-    background-color: transparent;
+    margin-top: 10%;
+    margin-bottom: 10%;
+    margin-right: 10%;
+    float: right;
+    
+    filter: brightness(1) invert(1);
+    background: transparent;
     border-style: none;
-    border-radius: 10px;
 }
-
-#close-box:hover {
-    background-color: #D9D9D9;
+#close {
+    width: 2vw;
+    height: 2vw;
+}
+#return:hover {
+    width: 6%;
+    #close-box {
+        margin-right: 15%;
+    }
 }
 
 #main-content {
@@ -41,12 +51,13 @@ h1,h3 {
 
     width: 92%;
     background-color: #FFF;
+    padding-top: 3%;
 }
 
 #important-details {
     position: relative;
     width: 90%;
-    height: 30%;
+    height: 40vh;
 
     display: flex;
     left: 5%;
@@ -58,49 +69,70 @@ h1,h3 {
 }
 .product-box.detail {
     width: auto;
+    height: auto;
     margin-right: auto;
+    margin-left: 2%;
+    padding-top: 1%;
 }
 
 .qr-barcode {
-    width: fit-content;
-    height: 20%;
+    width: 8vw;
+    height: 12%;
 
-    background-color: #F4F4F4;
+    background-color: transparent;
     border-radius: 10px;
     border-style: none;
     font-family: "Mukta Mahee", sans-serif;
-    font-weight: 300;
-    font-size: 1.1vw;
+    font-weight: 400;
+    font-size: 1.2vw;
     font-style: normal;
 }
+#qr-bttn {
+    background-color: rgba(205, 231, 161, 0.5);
+}
 .qr-barcode:hover {
-    background-color: rgba(205, 231, 161, 0.8);
+    background-color: rgba(205, 231, 161, 0.8) !important;
 }
 
 .product-box.qr {
     width: auto;
 }
+.product-box.qr img {
+    width: inherit;
+    height: inherit;
+    object-fit: contain;
+}
 
 #qrCode {
+    position: absolute;
     width: 30vh;
     height: 30vh;
-    float: inline-end;
-    margin-right: 5%;
+    right: 0vh;
+}
+#barcode {
+    width: 30vh;
+    height: 30vh;    
 }
 
 .product-box.image {
-    width: 52vh;
-    height: 100%;
+    width: 40vh;
+    height: 40vh;
     background-color: #C3B299;
+    border-radius: 10px;
+}
+.product-box.image img {
+    object-fit: contain;
+    width: inherit;
+    height: inherit;
 }
 
 #detail-history {
     position: relative;
     width: 90%;
-    height: 55%;
+    height: 65%;
 
     display: flex;
-    top: 3%;
+    top: -10%;
     left: 5%;
 }
 
@@ -113,30 +145,43 @@ h1,h3 {
     width: 100%;
     height: 80%;
     display: flex;
+    padding-top: 1%;
+}
+#detail-box {
+    width: 100%;
+    margin-top: 8%;
+    place-items: center;
 }
 
-#form-label {
-    width: 35%;
+.form-label-box {
+    width: 15%;
     height: 100%;
+    padding-left: 5%;
+    padding-right: 2%;
 }
 .form-label {
     margin-top: 3vh;
     margin-bottom: 2vh;
+    height: 6.2vh;
     text-align: end;
+    align-content: center;
 }
 
-#stock-history {
-    width: 60%;
+.stock-history-box {
+    width: 25%;
     height: 100%;
     justify-items: center;
 }
 .stock-history {
     margin-top: 3vh;
     margin-bottom: 1.8vh;
-    width: 95%;
-    height: 4.2vh;
+    padding-left: 10%;
+    width: 90%;
+    height: 6vh;
+
     background-color: rgba(195, 178, 153, 0.25);
     border-radius: 5px; 
+    align-content: center;
 }
 input{
     width: 94%;
@@ -144,6 +189,10 @@ input{
     padding-left: 2.5%;
     padding-right: 2.5%;
     background: transparent;
+    border: none;
+}
+input:focus {
+    outline: none;
     border: none;
 }
 #updateBttn {
