--- a/ALLProject/users/templates/users/navigation.html
+++ b/ALLProject/users/templates/users/navigation.html
@@ -19,11 +19,11 @@
             .navfull.{{page}} {
                 font-size: large;
                 color: #654C5E;
-                {% comment %} left: 6em; {% endcomment %}
+                left: 6em;
             }
             #navcolumn:hover {
                 overflow: hidden;
-                width: 9em;
+                width: 10em;
                 .navfull {
                     visibility: visible;
                 }
