Call manager via email

--- a/ALLProject/inventory/templates/inventory/product_form.html
+++ b/ALLProject/inventory/templates/inventory/product_form.html
@@ -29,6 +29,10 @@
         {{form.supplier}}
       </div>
       <div class="field-wrapper">
+        <h2>SKU</h2>
+        {{form.sku}}
+      </div>
+      <div class="field-wrapper">
         <h2>Quantity</h2>
         {{form.quantity}}
       </div>
