--- a/ALLProject/inventory/templates/partials/product_info.html
+++ b/ALLProject/inventory/templates/partials/product_info.html
@@ -3,6 +3,7 @@
     <div class="all-data">
         <div class="data">
         <h3>Category</h3>
+        <h3>SKU</h3>
         <h3>Stock</h3>
         <h3>Supplier</h3>
         <h3>Alert Notice</h3>
@@ -11,6 +12,7 @@
         <div class="v-separator"></div>
         <div class="data">
         <h3>{{chosen_product.category.name}}</h3>
+        <h3>{{chosen_product.sku}}</h3>
         <h3>{{chosen_product.quantity}}</h3>
         <h3>{{chosen_product.supplier}}</h3>
         <h3>{{chosen_product.alert_threshold}}</h3>
