--- a/ALLProject/templates/registration/login.html
+++ b/ALLProject/templates/registration/login.html
@@ -46,6 +46,7 @@
                 right: 0%;
                 top: 0%;
                 display: flex;
+                flex-direction: column;
                 justify-content: center;
                 align-items: flex-start;
                 padding-top: 5vh;
