--- a/ALLProject/static/css/home.css
+++ b/ALLProject/static/css/home.css
@@ -225,6 +225,7 @@ p {
     display: flex;
     justify-content: center;
     align-items: flex-start;
+    flex-direction: column;
     padding-top: 5vh;
     overflow: hidden;
 }
