--- a/ALLProject/static/css/password.css
+++ b/ALLProject/static/css/password.css
@@ -82,6 +82,7 @@
         display: flex;
         justify-content: center;
         align-items: flex-start;
+        flex-direction: column;
         padding-top: 5vh;
         overflow: hidden;
     }
