--- a/ALLProject/users/templates/users/change_password.html
+++ b/ALLProject/users/templates/users/change_password.html
@@ -56,6 +56,7 @@
                 right: 0%;
                 top: 0%;
                 display: flex;
+                flex-direction: column;
                 justify-content: center;
                 align-items: flex-start;
                 padding-top: 5vh;
