--- a/ALLProject/users/templates/users/home.html
+++ b/ALLProject/users/templates/users/home.html
@@ -84,6 +84,7 @@
                 top: 0%;
                 display: flex;
                 justify-content: center;
+                flex-direction: column;
                 align-items: flex-start;
                 padding-top: 5vh;
             }
