--- a/ALLProject/users/templates/users/password_reset_confirm.html
+++ b/ALLProject/users/templates/users/password_reset_confirm.html
@@ -70,6 +70,7 @@
                 display: flex;
                 justify-content: center;
                 align-items: flex-start;
+                flex-direction: column;
                 padding-top: 5vh;
             }
 
